# aaai_sss21

./: .gitmodules  README.md
SMADSBackend/: .gitignore  README.md  pom.xml
SMADSBackend/Scripts/: gps.txt  init.sql
SMADSBackend/Scripts/SimulateSpotMovement/: sim.js
SMADSClient/: .gitignore  Podfile
SMADSClient/Common/: SceneDelegate.swift
SMADSClient/Common/Extensions/: Double+Extension.swift  MapKitExtensions.swift
SMADSClient/Common/Models/: Adminstrator.swift  CustomAnnotation.swift  Issue.swift  Manager.swift  ServiceLocation.swift  ServiceLocationMarkerView.swift  Spot.swift  StatusTimestamp.swift  Store.swift  User.swift  Waypoint.swift
SMADSClient/Common/Services/: AuthenticationService.swift  FeedbackService.swift  ManagerService.swift  NetworkService.swift  NotificationService.swift  ServiceLocationService.swift  SpotService.swift  StoreService.swift  TripService.swift  UserService.swift
SMADSClient/Common/Utils/: Codable+Dictionary.swift  DateUtil.swift  MapUtils.swift  NetworkUtils.swift
SMADSClient/Common/View/: SpotAnnotationView.swift
SMADSClient/Customer/: CustomerAppDelegate.swift  Info.plist  TripManager.swift
SMADSClient/Customer/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
SMADSClient/Customer/ViewControllers/: AccountSettingsViewController.swift  AccountViewController.swift  ActiveTripViewController.swift  AppointmentViewController.swift  ConfirmPickupViewController.swift  CustomerTabBarController.swift  LemonadeDropoffViewController.swift  (+11 more)
SMADSClient/Manager/: Info.plist  ManagerAppDelegate.swift
SMADSClient/SMADS.xcodeproj/: project.pbxproj
SMADSClient/SMADS.xcworkspace/: contents.xcworkspacedata
smads_core/: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
smads_core/include/smads_core/: gps_translator.h
smads_core/launch/: architecture.api.template.launch  architecture.ros.husky.launch  architecture.ros.jackal.launch  architecture.ros.template.launch
smads_core/nodes/: smads_endpoints_node.py
smads_core/scripts/: add_to_path.sh  install_deps.sh
smads_core/src/: gps_translator.cc  gps_translator_node.cpp  message_translator.cpp
smads_core/src/smads_core/: navigation_interface.py
smads_core/src/smads_core/interface/: robot_navigation_interface.py  robot_sensor_interface.py
smads_core/systemd/service/: smads-architecture.service  smads-server.service
smads_core/systemd/service_scripts/: smads-architecture.sh  smads-robot-server.sh
smads_robot_app_client/: .gitignore  InstallDependencies
smads_robot_app_client/javascript/: README.md  index.js  package.json
smads_robot_app_client/typescript/: README.md  package.json
(+205 files in other folders)
